js/js.translator/testData/incremental/invalidation/circleInlineImportsUpdateWithIntraModuleInliner/lib1/f2.kt
inline fun f2_2() = "f2_2 -> ${f3_2()}"

inline fun f2_3() = "f2_3 -> ${f3_3()}"
